<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <Button
        android:id="@+id/left_pair"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_bluetooth_disabled"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/right_pair"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_bluetooth_disabled"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/straight"
                android:textAlignment="center"
                android:textColor="@color/straight"
                android:textSize="9pt"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/straight"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:background="@drawable/oval1"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="@color/text"
                android:textSize="15pt"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/jab"
                android:textAlignment="center"
                android:textColor="@color/jab"
                android:textSize="9pt"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/jab"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:background="@drawable/oval2"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="@color/text"
                android:textSize="15pt"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/hook"
                android:textAlignment="center"
                android:textColor="@color/hook"
                android:textSize="9pt"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/hook"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:background="@drawable/oval3"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="@color/text"
                android:textSize="15pt"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/uppercut"
                android:textAlignment="center"
                android:textColor="@color/uppercut"
                android:textSize="9pt"
                android:textStyle="bold"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/uppercut"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:background="@drawable/oval4"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="@color/text"
                android:textSize="15pt"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>
    </GridLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/speed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/punch_speed"
                android:textColor="@color/text"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

            <TextView
                android:id="@+id/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/speed"
                android:textColor="@color/text"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/speed_text"

                app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

            <TextView
                android:id="@+id/speed_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:text="m/s"
                app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/punch_force"
                android:textColor="@color/text"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/speed_text" />


            <TextView
                android:id="@+id/force"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/force"
                android:textColor="@color/text"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/textView4"

                app:layout_constraintTop_toBottomOf="@+id/speed" />

            <TextView
                android:id="@+id/force_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/force_unit"
                android:textColor="@color/text"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
        </LinearLayout>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/chronometer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/Bluetoothtest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Data from arduino: "
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />
    </android.support.constraint.ConstraintLayout>

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/text"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/start"
        app:layout_constraintStart_toEndOf="@+id/calibrate" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="startStopChronometer"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/calibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="CALIBRATE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="calibrate"/>




</android.support.constraint.ConstraintLayout>